v2.4
====
  * Catch SIGTERM